@@ -45,5 +45,48 @@ Click any of three. recommended **x64 Installer** for easy installation.
 >After downloading from x64 Installer, Double click on installation file. 
 
 ![image](https://user-images.githubusercontent.com/75372853/188183462-3545f9c1-6a48-47ab-abc2-38b383d4bba7.png)   
+
 >Click on next and Install it in whatever location you want.   
+
 ![image](https://user-images.githubusercontent.com/75372853/188183801-7f85d858-4000-497d-858e-f92890d2b2b5.png)
+
+>After installation click on close. `
+
+In lastest version of **JDK** **JavaFX** comes in but not work properly. So, you need to download **JavaFX** also via this link.    
+https://openjfx.io/     
+
+Then this will open.    
+![image](https://user-images.githubusercontent.com/75372853/188194322-669d0d5b-0bf1-4248-8556-9b59626a1648.png)
+
+>Click on **DOWNLOAD**      
+
+>Select configuration for windows
+![image](https://user-images.githubusercontent.com/75372853/188196006-9ca536bc-90c1-400b-ac18-9bcf99233b4a.png)     
+
+>Select the Architecture based x64 or x86       
+
+![image](https://user-images.githubusercontent.com/75372853/188196576-07dc53fb-56da-4e71-a9e5-5f668df8eb61.png)     
+![image](https://user-images.githubusercontent.com/75372853/188196650-2e18043a-66b4-4522-a70d-684f5aa0775a.png)
+
+>After Download Extract the Zip Folder in Folder you want   
+
+>While creating the Project define the VM optin in InteliJ and as well as in VS Code        
+
+**Note:- IN VS CODE VM option is vmArgs in launch.json**       
+
+**In VS CODE**      
+>Run > Add Configuration > after this line "request": "launch", add "vmArgs": "--module-path="**your path**" --add-modules=javafx.controls"       
+
+**In InteliJ**      
+> Run > Edit Configuration      
+![image](https://user-images.githubusercontent.com/75372853/188203422-d9d13545-27a0-4b4a-b2a2-ebd0a9537a65.png)     
+
+Then this will Open     
+![image](https://user-images.githubusercontent.com/75372853/188202398-a717c2ef-d2fc-4c5a-a726-4573c148e41d.png)     
+
+> Click on "Modify Option" > Click on Add VM Options      
+![image](https://user-images.githubusercontent.com/75372853/188202990-b416ec5f-d158-4a47-957b-bade6d381455.png)     
+
+> Then give this path "--module-path="**your path**" --add-modules=javafx.controls"     
+
+Then Run this and your Program       
